--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,4 +2,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  max-width: 1240px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+  background-color: rgb(22, 18, 18);
 }
