--- a/src/styles/navbar.module.scss
+++ b/src/styles/navbar.module.scss
@@ -1,8 +1,33 @@
 .wrapper{
 display: flex;
 justify-content: space-around;
+margin-top: 20px;
+border-bottom: 2px solid orange;
+margin-bottom: 20px;
+padding-bottom: 15px;
 }
 
 .icon_conteiner{
     display: flex;
+    max-height: 35px;
+    max-width: 120px;
+
+    &_title{
+        font-size: 20px;
+        font-weight: 700;
+        margin-left: 8px;
+    }
+}
+.games_conteiner{
+
+    margin-top: 12px;
+    &_button{
+        font-size: 18px;
+        font-weight: 400;
+        text-decoration: none;
+        }
+}
+.games_conteiner_button:hover{
+    color: orange;
+    transition:0.7s;
 }
