--- a/src/styles/page.module.scss
+++ b/src/styles/page.module.scss
@@ -1,104 +1,3 @@
-.catalog_promo_conteiner{
-    margin: 20px 20px 20px 20px;
+main{
     max-width: 1240px;
-    display: flex;
-    flex-direction: column;
-
-    a{
-        text-decoration: none;
-    }
-
-    &_title{
-        font-size: 26px;
-        text-align: center;
-        font-weight: 800;
-        text-transform: uppercase;
-    }
-
 }
-
-.catalog_promo{
-    display: flex;
-    flex-wrap:wrap;
-    justify-content: center;
-    align-items: center;
-    
-    &_button{
-        display:block;
-        color: #000;
-        font-size: 18px;
-        text-decoration: none;
-        border-radius: 11px;
-        text-transform: uppercase;
-        padding: 11px 12px; 
-        background-color: #fbbb43;
-        transition: all .3s;
-    }
-
-    &_button:hover{
-        background-color: #fff;
-    }
-}
-
-.shop_item{
-    display: block;
-    position: relative;
-    border: 1px solid #fff;
-    overflow: hidden;
-    border-radius: 10px;
-    width:calc(100%/5 - 34px);
-    min-width: 156px;
-    margin:0 16px 40px;
-    transition:all 0.5s;
-
-    &_image{
-        display: block;
-        margin-bottom: 8px;
-    }
-
-
-    &_title{
-        display: block;
-        margin-left:4px;
-        margin-right:4px;
-
-        &_name{
-            color:#fff;
-            font-size: 16px;
-            min-height: 60px;
-        }
-
-    }
-    
-    &_conteiner{
-        font-size: 18px;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: wrap;
-        margin-bottom: 8px;
-
-        &_price{
-            padding-top: 5px;
-        }
-
-        &_basket_button{
-            color: #000;
-            font-size: 18px;
-            text-decoration: none;
-            border-radius: 16px;
-            text-transform: uppercase;
-            padding: 5px 12px 5px 12px; 
-            background-color: #fbbb43;
-        }
-
-        &_basket_button:hover{
-            background-color: #fff;
-        }
-    }
-}
-.shop_item:hover{
-    border-color: #fbbb43;
-    color: #fbbb43;
-    scale: (1.1);
-}
-
