Feat(pages,components)made a filters,fix bag with catalogPromo

--- a/src/styles/catalogPromo.module.scss
+++ b/src/styles/catalogPromo.module.scss
@@ -24,6 +24,8 @@
     align-items: center;
     
     &_button{
+        max-width: 130px;
+        margin-left: calc(100%/2 - 80px);
         display:block;
         color: #000;
         font-size: 18px;
