--- a/src/styles/catalogPromo.module.scss
+++ b/src/styles/catalogPromo.module.scss
@@ -91,6 +91,7 @@
             text-transform: uppercase;
             padding: 5px 12px 5px 12px; 
             background-color: #fbbb43;
+            cursor: pointer;
         }
 
         &_basket_button:hover{
