--- a/src/styles/gameItem.module.scss
+++ b/src/styles/gameItem.module.scss
@@ -1,6 +1,6 @@
 .card_conteiner{
     max-width: 1240px;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 20px;
     display: flex;
 
@@ -19,6 +19,7 @@
 .title{
     display: block;
     max-width: 735px;
+    margin-top: 40px;
     &_name{
         padding-left: 16px;
         margin-bottom: 18px;
@@ -81,7 +82,62 @@
             font-weight: 700;
             font-size: 16px;
             color:#fbbb43;
-            text-align: center;
         }
     }
+}
+
+.info_conteiner{
+    display: flex;
+    justify-content: space-between;
+}
+
+.specification{
+    display: block;
+
+    &_icons{
+        display: flex;
+        flex-wrap: wrap;
+            div{
+                margin-right: 30px;
+                margin-bottom: 20px;
+                border: 2px solid #fbbb43;
+                border-radius: 50%;
+                overflow: hidden;
+            }
+    }
+}
+
+.specification_text{
+    display:block;
+
+    &_item{
+        display: flex;
+        max-width: 300px;
+    }
+
+    .unchangeable{
+        display: block;
+        margin-bottom: 16px;
+        font-size: 14px;
+        color:#fff;
+        width: 101px;
+        margin-right: 20px;
+    }
+    .changeable{
+        display: block;
+        font-weight: 700;
+        font-size: 14px;
+        cursor: pointer;
+        color:#fbbb43;
+    }
+}
+
+.trailer{
+    max-width: 710px;
+    max-height: 408px;
+    display: block;
+    border-radius: 26px;
+    border: 3px solid #fbbb43;
+    overflow: hidden;
+    margin-right: 10px;
 }
