Feat(pages,actions,styles)made Basket,function to add item in cart

--- a/src/components/catalogPromo/catalogPromo.module.scss
+++ b/src/components/catalogPromo/catalogPromo.module.scss
@@ -14,7 +14,6 @@
         font-weight: 800;
         text-transform: uppercase;
     }
-
 }
 
 .catalog_promo{
@@ -35,6 +34,7 @@
         padding: 11px 12px; 
         background-color: #fbbb43;
         transition: all .3s;
+        text-align: center;
     }
 
     &_button:hover{
