Feat(pages,comonents)made full basket and catalogPromo

--- a/src/styles/basket.module.scss
+++ b/src/styles/basket.module.scss
@@ -93,6 +93,7 @@
 
 .button{
     display: inline;
+    text-transform: uppercase;
     padding:11px 12px 8px 12px;
     background: #fbbb43;
     border-radius: 11px;
