--- a/src/components/descriptionGame/descriptionGame.module.scss
+++ b/src/components/descriptionGame/descriptionGame.module.scss
@@ -25,10 +25,76 @@
     display: block;
     padding: 16px 30px 16px 30px;
     font-size: 16px;
+}
 
-    &_title{
-        font-size: 22px;
-        font-weight: 800;
-        margin-bottom:16px ;
+.about{
+    display: none;
+
+    &_active{
+        display: block;
+
+        .content_title{
+            font-size: 22px;
+            font-weight: 800;
+            margin-bottom:16px ;
+        }
+    }
+}
+
+.system{
+    display: none;
+
+    &_active{
+        display: block;
+
+        .title{
+            font-size: 18px;
+            padding-bottom: 16px;
+        }
+        .conteiner{
+            border-bottom: 1px solid rgb(114, 112, 112);
+            margin-bottom: 16px;
+        }
+        .item{
+            display: flex;
+            
+            .unchangeable{
+                display: block;
+                margin-bottom: 16px;
+                max-width: 180px;
+                min-width: 150px;
+                margin-right: 20px;
+                font-size: 14px;
+                color:rgb(114, 112, 112);
+            }
+        }
+    }
+}
+
+.activation{
+    display: none;
+
+    &_active{
+        display: block;
+
+        .text{
+            display: block;
+            margin-bottom: 16px;
+            line-height: 1.5;
+            font-size: 16px;
+
+            a{
+                text-decoration: none;
+                color:#fbbb43;
+            }
+        }
+
+        .icon{
+            display: inline;
+            border: #fbbb43 2px solid;
+            border-radius: 50%;
+            padding: 4px 8px 6px 8px;
+            margin-right: 15px;
+        }
     }
 }
