--- a/src/components/similarGamesSlider/similarGamesSlider.module.scss
+++ b/src/components/similarGamesSlider/similarGamesSlider.module.scss
@@ -72,7 +72,7 @@
     display: flex;
     justify-content: space-between;
 
-    div{
+    .button{
         cursor: pointer;
         padding: 0 10px 0 10px;
         margin-top: 5px;
@@ -82,8 +82,23 @@
         transition: all 0.5s;
     }
 
-    div:hover{
+    .button:hover{
         border-color: #fbbb43;
         color:#fbbb43;
+    }
+}
+
+.progressbar{
+    margin-top: 25px;
+    width: 100%;
+    height: 2px;
+    background: rgba(255,255,255,.3);
+    overflow: hidden;
+
+    &_value{
+        width: 12.5%;
+        height: 5px;
+        background: #fff;
+        transition: all 3s;
     }
 }
