--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -82,3 +82,19 @@ justify-content: center;
         font-size: 16px;
     }
 }
+
+//mobile
+
+@media (max-width:768px) {
+    .info_icon{
+        display: none;
+    }
+    .info_menu{
+        display: none;
+    }
+    .images{
+        div{
+            margin-right: 10px;
+        }
+    }
+}
