--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -20,8 +20,8 @@ padding-bottom: 15px;
     }
 }
 .games_conteiner{
-
     margin-top: 8px;
+
     &_button{
         font-size: 22px;
         font-weight: 700;
@@ -32,4 +32,11 @@ padding-bottom: 15px;
 .games_conteiner_button:hover{
     color: orange;
     transition:0.7s;
+}
+
+//mobile
+@media (max-width:768px){
+    .wrapper{
+        width: 100%!important;
+    }
 }
