--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -12,13 +12,13 @@
 
 .slider{
     transition: 1.5s ease-in-out;
+    
     &_image{
         position: relative;
         max-height: 720px;
     }
 
     &_title{
-        
         font-size: 30px;
         font-weight: 800;
         position:relative;
@@ -45,7 +45,7 @@
     
     .button{
         border-radius: 50%;
-        
+        transition: 1s;
     }
 }
 
