--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,3 +10,12 @@ body{
   color: #fff;
   background-color: rgb(22, 18, 18);
 }
+
+@media (max-width:768px) {
+  body{
+    max-width: 100%!important;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+  }
+}
