--- a/src/styles/catalog.module.scss
+++ b/src/styles/catalog.module.scss
@@ -54,3 +54,22 @@
     }
 }
 
+//mobile
+@media (max-width:768px) {
+    .conteiner{
+        margin:0;
+    }
+    .title{
+       margin-left: 30px;
+    }
+    .filtres{
+        display: flex;
+        flex-direction:column; 
+        justify-content: center;
+        align-items: center;
+        
+        div,select{
+            width: 120px;
+        }
+    }
+}
