Feat(pages,styles,components)add mobile for gameItem,basket,fix bag

--- a/src/components/similarGamesSlider/similarGamesSlider.module.scss
+++ b/src/components/similarGamesSlider/similarGamesSlider.module.scss
@@ -102,3 +102,13 @@
         transition: all 3s;
     }
 }
+
+//mobile
+@media (max-width:768px) {
+    .wrapper_slider{
+        overflow-x: scroll;
+    }
+    .conteiner_buttons{
+        display: none;
+    }
+}
