--- a/src/components/descriptionGame/descriptionGame.module.scss
+++ b/src/components/descriptionGame/descriptionGame.module.scss
@@ -98,3 +98,18 @@
         }
     }
 }
+
+//mobile
+@media (max-width:768px) {
+    .wrapper{
+        max-width: 100%;
+    }
+    .navigation{
+        overflow-x: scroll;
+        div{
+            border-width: 1px;
+            border-style: solid;
+            border-color: rgba(255,255,255,.2);
+        }
+    }
+}
