--- a/src/styles/gameItem.module.scss
+++ b/src/styles/gameItem.module.scss
@@ -3,11 +3,10 @@
     margin-top: 40px;
     margin-bottom: 20px;
     display: flex;
+    justify-content: space-between;
 
     .image{
         display: inline-block;
-        max-width: 370px;
-        margin-right: 55px;
         max-width: 370px;
         overflow: hidden;
         border:1px solid #fff;
@@ -147,4 +146,60 @@
 .descriprion_conteiner{
     display: flex;
     gap: 140px;
+}
+
+//mobile
+
+@media (max-width:768px) {
+    .wrapper{
+        max-width:100%;
+    }
+    .card_conteiner{
+        flex-direction: column;
+        align-items: center;
+    }
+    .action{
+        padding-top: 34px;
+        padding-bottom: 34px;
+        border-width: 1px 0;
+        border-style: solid;
+        border-color: rgba(255,255,255,.2);
+        gap:0;
+        justify-content: center;
+        &_button{
+            order:2;
+            font-size: 18px;
+            padding: 15px 12px 12px;
+        }
+        &_price{
+            font-size: 32px;
+            order:1;
+        }
+    }
+    .subinfo{
+        flex-direction: column;
+
+        &_item{
+            display: flex;
+            margin-right: 0;
+            margin-bottom: 20px;
+            &_body{
+                margin-top: 0;
+                margin-left: 30px;
+            }
+        }
+    }
+    .info_conteiner{
+        flex-direction: column-reverse;
+        justify-content: none;
+
+        iframe{
+            width: 100%;
+        }
+    }
+
+    .descriprion_conteiner{
+        flex-direction: column;
+        gap:0;
+    }
 }
