--- a/src/styles/catalog.module.scss
+++ b/src/styles/catalog.module.scss
@@ -59,11 +59,9 @@
     .conteiner{
         margin:0;
     }
-    
     .title{
-       margin-left: 30px;
+        text-align: center;
     }
-
     .filtres{
         display: flex;
         flex-direction:column; 
