--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,7 +10,7 @@ body{
   color: #fff;
   background-color: rgb(22, 18, 18);
 }
-
+//mobile
 @media (max-width:768px) {
   body{
     max-width: 100%!important;
